@@ -1611,6 +1611,7 @@ options.general.sortBuffers=Sort buffer list (takes effect after restart)
 options.general.sortByName=Sort buffer list by file name, instead of path name
 options.general.checkModStatus=Warn if file is modified on disk by another program
 options.general.twoStageSave=Two-stage save (safer but resets file owner on Unix)
+options.general.confirmSaveAll="Save All Buffers" asks for confirmation
 options.general.stripTrailingEOL=Hide final end of line (if any)
 #}}}
 
